--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-654.9KB/s(Youtube:不良林), server: ingress-i2.onebox6.org, port: 38101, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i2.onebox6.org}}
-  - {name: 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.15MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇺🇸 美国-325.4KB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.42MB/s(Youtube:不良林), server: 103.56.60.235, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-328.0KB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-408.0KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-1.23MB/s(Youtube:不良林), server: in03.dns220607.com, port: 64071, type: vmess, uuid: 4a3fd26a-6e53-3eba-b9f3-13ec92173082, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: in03.dns220607.com}}
+  - {name: 🇨🇳 中国-10.60MB/s(Youtube:不良林), server: 103.56.60.235, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 伊朗-1.42MB/s(Youtube:不良林), server: srvf.myandroidplus1.ir, port: 80, type: vmess, uuid: e7cf2f58-85b3-d3db-a75c-55df4a9ee83a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /apiws, ws-headers: {Host: srvf.myandroidplus1.ir}}
-  - {name: 🇯🇵 日本-498.4KB/s(Youtube:不良林), server: mixv4-27.194610.xyz, port: 443, type: vmess, uuid: e9bb0c5c-01c7-7907-c454-3b8b6d472b19, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /a185d5dc-c726-466c-98f2-ba494e63695f, ws-headers: {Host: mixv4-27.194610.xyz}}
-  - {name: 🇭🇰 香港-2.68MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇺🇸 美国-449.6KB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-413.2KB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.98MB/s(Youtube:不良林), server: sg-cn.teacher2050.com, port: 43508, type: trojan, password: E44523FE-B9E4-BD49-AEAF-DBABE701D016, sni: sg-cn.teacher2050.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.44MB/s(Youtube:不良林), server: 120.241.236.93, port: 51700, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.66MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.75MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-654.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-325.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-328.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-408.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.60MB/s(Youtube:不良林)
       - 伊朗-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-498.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-449.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-413.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-654.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-325.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-328.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-408.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.60MB/s(Youtube:不良林)
       - 伊朗-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-498.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-449.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-413.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-654.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-325.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-328.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-408.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.60MB/s(Youtube:不良林)
       - 伊朗-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-498.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-449.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-413.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-408.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.68MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-654.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-325.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-328.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-408.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.60MB/s(Youtube:不良林)
       - 伊朗-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-498.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-449.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-413.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-654.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-325.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-328.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-408.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.60MB/s(Youtube:不良林)
       - 伊朗-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-498.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-449.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-413.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-654.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-325.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-328.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-408.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.60MB/s(Youtube:不良林)
       - 伊朗-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-498.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-449.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-413.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-654.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-325.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-328.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-408.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.60MB/s(Youtube:不良林)
       - 伊朗-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-498.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-449.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-413.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
