--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-1.23MB/s(Youtube:不良林), server: in03.dns220607.com, port: 64071, type: vmess, uuid: 4a3fd26a-6e53-3eba-b9f3-13ec92173082, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: in03.dns220607.com}}
-  - {name: 🇨🇳 中国-10.60MB/s(Youtube:不良林), server: 103.56.60.235, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 伊朗-1.42MB/s(Youtube:不良林), server: srvf.myandroidplus1.ir, port: 80, type: vmess, uuid: e7cf2f58-85b3-d3db-a75c-55df4a9ee83a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /apiws, ws-headers: {Host: srvf.myandroidplus1.ir}}
-  - {name: 🇺🇸 美国-449.6KB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-413.2KB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.98MB/s(Youtube:不良林), server: sg-cn.teacher2050.com, port: 43508, type: trojan, password: E44523FE-B9E4-BD49-AEAF-DBABE701D016, sni: sg-cn.teacher2050.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.44MB/s(Youtube:不良林), server: 120.241.236.93, port: 51700, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.66MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.83MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.48MB/s(Youtube:不良林), server: 120.233.186.204, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.05MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-11.17MB/s(Youtube:不良林), server: 120.233.186.59, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.75MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.69MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 120.241.236.93, port: 46061, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.50MB/s(Youtube:不良林), server: 120.241.236.93, port: 34955, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-2.27MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇨🇳 中国-3.51MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.60MB/s(Youtube:不良林)
-      - 伊朗-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-449.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-413.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.60MB/s(Youtube:不良林)
-      - 伊朗-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-449.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-413.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.60MB/s(Youtube:不良林)
-      - 伊朗-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-449.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-413.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.60MB/s(Youtube:不良林)
-      - 伊朗-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-449.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-413.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.60MB/s(Youtube:不良林)
-      - 伊朗-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-449.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-413.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.60MB/s(Youtube:不良林)
-      - 伊朗-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-449.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-413.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.60MB/s(Youtube:不良林)
-      - 伊朗-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-449.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-413.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
