--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-3.69MB/s(Youtube:不良林), server: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty, port: 668, type: vmess, uuid: a0fec1fb-e217-344b-84e1-45b412ccd670, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty}}
-  - {name: 🇩🇪 德国-1.05MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-2.27MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇸🇬 新加坡-2.47MB/s(Youtube:不良林), server: 13.250.126.43, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇺🇸 美国-4.96MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.51MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.50MB/s(Youtube:不良林), server: 120.241.236.93, port: 34955, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.49MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-7.08MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-183.8KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-352.1KB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇺🇸 美国-359.9KB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.09MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-321.7KB/s(Youtube:不良林), server: 67tw01.fans8.xyz, port: 443, type: trojan, password: 21882ea6-235b-4463-93d4-55c7d378857d, sni: 67tw01.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.10MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 台湾-1.48MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.69MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-183.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-359.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-321.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.10MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.48MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-3.69MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-183.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-359.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-321.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.10MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.48MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.69MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-183.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-359.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-321.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.10MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.48MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.48MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-3.69MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-183.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-359.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-321.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.10MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.48MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.69MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-183.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-359.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-321.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.10MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.48MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.69MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-183.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-359.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-321.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.10MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.48MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.69MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-183.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-359.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-321.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.10MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.48MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
