--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-183.8KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇩🇪 德国-2.65MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.53MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-472.0KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.09MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-1.48MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-534.0KB/s(Youtube:不良林), server: hk64.fans8.xyz, port: 443, type: trojan, password: 21882ea6-235b-4463-93d4-55c7d378857d, sni: hk64.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-339.4KB/s(Youtube:不良林), server: in03.dns220607.com, port: 64086, type: vmess, uuid: 4a3fd26a-6e53-3eba-b9f3-13ec92173082, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /biteb, ws-headers: {Host: in03.dns220607.com}}
-  - {name: 🇺🇸 美国-457.9KB/s(Youtube:不良林), server: in03.dns220607.com, port: 64078, type: vmess, uuid: 4a3fd26a-6e53-3eba-b9f3-13ec92173082, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: in03.dns220607.com}}
-  - {name: 🇭🇰 香港-2.43MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇨🇳 中国-1.91MB/s(Youtube:不良林), server: sg-cn.teacher2050.com, port: 43508, type: trojan, password: E44523FE-B9E4-BD49-AEAF-DBABE701D016, sni: sg-cn.teacher2050.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.85MB/s(Youtube:不良林), server: 120.241.236.93, port: 46061, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-233.5KB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.64MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.71MB/s(Youtube:不良林), server: 120.241.236.93, port: 51700, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-333.8KB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.09MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: c8bae3de-16ed-4247-8a99-f38ef79a4b51, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-330.2KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-884.0KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-183.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-472.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-534.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-339.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-457.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-233.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-884.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-183.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-472.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-534.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-339.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-457.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-233.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-884.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-183.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-472.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-534.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-339.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-457.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-233.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-884.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.48MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.43MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-183.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-472.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-534.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-339.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-457.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-233.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-884.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-183.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-472.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-534.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-339.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-457.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-233.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-884.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-183.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-472.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-534.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-339.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-457.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-233.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-884.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-183.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-472.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-534.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-339.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-457.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-233.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-884.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
